--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "node server/server.cjs",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server/server.cjs"
+    "start": "node server/server.cjs",
+    "postinstall": "echo 'Installation terminée'"
   },
   "devDependencies": {
     "vite": "^5.4.2"
