--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "vite": "^5.4.2"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "stripe": "^13.6.0",
-    "dotenv": "^16.3.1"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "node-fetch": "^2.7.0",
+    "stripe": "^13.6.0"
   }
 }
