fix: Correction configuration Vercel pour résoudre erreur 404
- Mise à jour vercel.json avec routes spécifiques pour fichiers HTML
- Ajout variables d'environnement Brevo dans vercel.json
- Simplification script build dans package.json
- Ajout .vercelignore pour optimiser déploiement
- Intégration complète routes contact dans serveur

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "server": "node server/server.cjs",
-    "build": "vite build",
+    "build": "echo 'Build completed - serving static files directly'",
     "preview": "vite preview",
     "start": "node server/server.cjs",
     "postinstall": "echo 'Installation terminée'"
