--- a/vercel.json
+++ b/vercel.json
@@ -8,53 +8,15 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/server.cjs"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/dist/assets/$1"
-    },
-    {
-      "src": "/boat-icon.svg",
-      "dest": "/dist/boat-icon.svg"
-    },
-    {
-      "src": "/boats.html",
-      "dest": "/dist/boats.html"
-    },
-    {
-      "src": "/boats_detail.html", 
-      "dest": "/dist/boats_detail.html"
-    },
-    {
-      "src": "/contact.html",
-      "dest": "/dist/contact.html"
-    },
-    {
-      "src": "/services.html",
-      "dest": "/dist/services.html"
-    },
-    {
-      "src": "/test-navigation.html",
-      "dest": "/dist/test-navigation.html"
-    },
-    {
-      "src": "/",
-      "dest": "/dist/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/dist/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "/server/server.cjs" },
+    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
+    { "src": "/(.*)", "dest": "/dist/index.html" }
   ],
+  
   "env": {
     "MONGO_URI": "mongodb+srv://ProjetM1G2:Thc8XKw6dpfs0Aag@projetm1g2.vmsnfdz.mongodb.net/ProjetM1G2?retryWrites=true&w=majority&appName=ProjetM1G2",
     "JWT_SECRET": "superSecretKey",
@@ -64,3 +26,5 @@
     "CONTACT_FROM_EMAIL": "no-reply@sailingloc.com"
   }
 }
+
+
