--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "stripe": "^13.6.0"
   }
