--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "node server/server.cjs",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\" --names \"SERVER,CLIENT\" --prefix-colors \"blue,green\"",
     "check": "node check-setup.js",
-    "build": "vite build",
+    "build": "vite build && node post-build.cjs",
     "preview": "vite preview",
     "start": "node server/server.cjs",
     "postinstall": "echo 'Installation terminée'"
