--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
     }
   ],
   "routes": [
-    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
-    { "src": "/(boats|services|contact|boats_detail|test-navigation|boat-management)", "dest": "/dist/$1.html" },
-    { "src": "/(.*\\.(?:html|js|css|svg|png|jpg|jpeg|gif|webp|ico|json|map))", "dest": "/dist/$1" },
-    { "src": "/", "dest": "/dist/index.html" },
-    { "src": "/(.*)", "dest": "/dist/index.html" }
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "/(boats|services|contact|boats_detail|test-navigation|boat-management|experience|boat|reserve|clear-cache|test-index|test-delete-boat)\\.html", "dest": "/$1.html" },
+    { "src": "/(.*\\.(?:js|css|svg|png|jpg|jpeg|gif|webp|ico|json|map))", "dest": "/$1" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   
   "env": {
